exports[`module "database/relationship" #get() belongs-to relationships resolves with the correct value when present 1`] = `
Object {
  "createdAt": null,
  "email": "hello@postlight.com",
  "id": 999999,
  "name": "Test User",
  "password": "password",
  "posts": Array [
    Object {
      "body": null,
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "user": [Circular],
      "userId": 999999,
    },
  ],
  "updatedAt": null,
}
`;

exports[`module "database/relationship" #get() has-one relationships resolves with the correct value when present 1`] = `
Object {
  "createdAt": null,
  "id": 999999,
  "post": Object {
    "body": null,
    "createdAt": null,
    "id": 999999,
    "image": [Circular],
    "isPublic": false,
    "title": "#get() test",
    "updatedAt": null,
    "userId": 999999,
  },
  "postId": 999999,
  "updatedAt": null,
  "url": "https://postlight.com",
}
`;

exports[`module "database/relationship" #get() many-to-many relationships resolves with the correct value when present 1`] = `
Array [
  Object {
    "createdAt": null,
    "id": 999999,
    "name": "#get() test 1",
    "posts": Object {
      "body": null,
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "tags": Array [
        [Circular],
        Object {
          "createdAt": null,
          "id": 1000000,
          "name": "#get() test 2",
          "posts": [Circular],
          "updatedAt": null,
        },
        Object {
          "createdAt": null,
          "id": 1000001,
          "name": "#get() test 3",
          "posts": [Circular],
          "updatedAt": null,
        },
      ],
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 1000000,
    "name": "#get() test 2",
    "posts": Object {
      "body": null,
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "tags": Array [
        Object {
          "createdAt": null,
          "id": 999999,
          "name": "#get() test 1",
          "posts": [Circular],
          "updatedAt": null,
        },
        [Circular],
        Object {
          "createdAt": null,
          "id": 1000001,
          "name": "#get() test 3",
          "posts": [Circular],
          "updatedAt": null,
        },
      ],
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 1000001,
    "name": "#get() test 3",
    "posts": Object {
      "body": null,
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "tags": Array [
        Object {
          "createdAt": null,
          "id": 999999,
          "name": "#get() test 1",
          "posts": [Circular],
          "updatedAt": null,
        },
        Object {
          "createdAt": null,
          "id": 1000000,
          "name": "#get() test 2",
          "posts": [Circular],
          "updatedAt": null,
        },
        [Circular],
      ],
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "updatedAt": null,
  },
]
`;

exports[`module "database/relationship" #get() one-to-many relationships resolves with the correct value when present 1`] = `
Array [
  Object {
    "createdAt": null,
    "edited": false,
    "id": 999999,
    "message": "#get() test 1",
    "post": Object {
      "body": null,
      "comments": Array [
        [Circular],
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000000,
          "message": "#get() test 2",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000001,
          "message": "#get() test 3",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
      ],
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "postId": 999999,
    "updatedAt": null,
    "userId": null,
  },
  Object {
    "createdAt": null,
    "edited": false,
    "id": 1000000,
    "message": "#get() test 2",
    "post": Object {
      "body": null,
      "comments": Array [
        Object {
          "createdAt": null,
          "edited": false,
          "id": 999999,
          "message": "#get() test 1",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        [Circular],
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000001,
          "message": "#get() test 3",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
      ],
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "postId": 999999,
    "updatedAt": null,
    "userId": null,
  },
  Object {
    "createdAt": null,
    "edited": false,
    "id": 1000001,
    "message": "#get() test 3",
    "post": Object {
      "body": null,
      "comments": Array [
        Object {
          "createdAt": null,
          "edited": false,
          "id": 999999,
          "message": "#get() test 1",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000000,
          "message": "#get() test 2",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        [Circular],
      ],
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "postId": 999999,
    "updatedAt": null,
    "userId": null,
  },
]
`;

exports[`module "database/relationship" #set() belongs-to relationships can add a record to the relationship 1`] = `
Object {
  "body": null,
  "createdAt": null,
  "id": 999999,
  "isPublic": false,
  "title": "#get() test",
  "updatedAt": null,
  "user": Object {
    "createdAt": null,
    "email": "hello@postlight.com",
    "id": 1000000,
    "name": "Test User",
    "password": "password",
    "posts": Array [
      [Circular],
    ],
    "updatedAt": null,
  },
  "userId": 1000000,
}
`;

exports[`module "database/relationship" #set() has-one relationships can add a record to the relationship 1`] = `
Object {
  "createdAt": null,
  "id": 999999,
  "post": Object {
    "body": null,
    "createdAt": null,
    "id": 999999,
    "image": [Circular],
    "isPublic": false,
    "title": "#get() test",
    "updatedAt": null,
    "userId": 999999,
  },
  "postId": 999999,
  "updatedAt": null,
  "url": "https://postlight.com",
}
`;

exports[`module "database/relationship" #set() one-to-many relationships can add records to the relationship 1`] = `
Array [
  Object {
    "createdAt": null,
    "edited": false,
    "id": 999999,
    "message": "#set() test 1",
    "post": Object {
      "body": null,
      "comments": Array [
        [Circular],
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000000,
          "message": "#set() test 2",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000001,
          "message": "#set() test 3",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
      ],
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "postId": 999999,
    "updatedAt": null,
    "userId": null,
  },
  Object {
    "createdAt": null,
    "edited": false,
    "id": 1000000,
    "message": "#set() test 2",
    "post": Object {
      "body": null,
      "comments": Array [
        Object {
          "createdAt": null,
          "edited": false,
          "id": 999999,
          "message": "#set() test 1",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        [Circular],
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000001,
          "message": "#set() test 3",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
      ],
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "postId": 999999,
    "updatedAt": null,
    "userId": null,
  },
  Object {
    "createdAt": null,
    "edited": false,
    "id": 1000001,
    "message": "#set() test 3",
    "post": Object {
      "body": null,
      "comments": Array [
        Object {
          "createdAt": null,
          "edited": false,
          "id": 999999,
          "message": "#set() test 1",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        Object {
          "createdAt": null,
          "edited": false,
          "id": 1000000,
          "message": "#set() test 2",
          "post": [Circular],
          "postId": 999999,
          "updatedAt": null,
          "userId": null,
        },
        [Circular],
      ],
      "createdAt": null,
      "id": 999999,
      "isPublic": false,
      "title": "#get() test",
      "updatedAt": null,
      "userId": 999999,
    },
    "postId": 999999,
    "updatedAt": null,
    "userId": null,
  },
]
`;

exports[`module "database/relationship" #set() one-to-many relationships can remove records from the relationship 1`] = `
Object {
  "body": null,
  "comments": Array [],
  "createdAt": null,
  "id": 999999,
  "isPublic": false,
  "title": "#get() test",
  "updatedAt": null,
  "userId": 999999,
}
`;
